--- a/buildSystem/dependencies.gradle
+++ b/buildSystem/dependencies.gradle
@@ -2,43 +2,41 @@
 ext {
 
     // Android dependencies
-    supportLibraryVersion = '27.0.2'
+    kotlinVersion = '1.2.30'
+    supportLibraryVersion = '27.1.0'
     constraintsLayoutVersion = '1.0.2'
 
     // Testing
     junitVersion = '4.12'
-    robolectricVersion = '3.6.1'
     runnerVersion = '1.0.1'
     espressoVersion = '3.0.1'
 
     deps = [
-            navigation: [
+            library: [
                     implementation : [],
                     api: [],
                     annotationProcessor : [],
+                    kapt : [],
                     compileOnly : [],
                     testImplementation : [
                             "junit:junit:${junitVersion}",
-                            "org.robolectric:robolectric:${robolectricVersion}",
-                            "org.robolectric:shadows-multidex:${robolectricVersion}"
                     ],
                     androidTestImplementation : [
                             "com.android.support.test:runner:${runnerVersion}",
                             "com.android.support.test.espresso:espresso-core:${espressoVersion}"
                     ]
             ],
-            navigation_sample: [
+            sample: [
                     implementation : [
                             "com.android.support:appcompat-v7:${supportLibraryVersion}",
-                            "com.android.support.constraint:constraint-layout:${constraintsLayoutVersion}"
+                            "com.android.support.constraint:constraint-layout:${constraintsLayoutVersion}",
+                            "org.jetbrains.kotlin:kotlin-stdlib-jre7:${kotlinVersion}"
                     ],
-                    api: [],
                     annotationProcessor : [],
+                    kapt : [],
                     compileOnly : [],
                     testImplementation : [
                             "junit:junit:${junitVersion}",
-                            "org.robolectric:robolectric:${robolectricVersion}",
-                            "org.robolectric:shadows-multidex:${robolectricVersion}"
                     ],
                     androidTestImplementation : [
                             "com.android.support.test:runner:${runnerVersion}",
