--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,14 @@
 apply from: 'buildSystem/dependencies.gradle'
 
 buildscript {
-    ext.kotlinVersion = '1.2.30'
-    ext.gradleVersion = '3.1.0'
-    ext.gradlePluginVersion = '1.5'
-
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$gradleVersion"
-        classpath "com.github.dcendents:android-maven-gradle-plugin:$gradlePluginVersion"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.31'
     }
 }
 
