--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,14 @@
 apply from: 'buildSystem/dependencies.gradle'
 
 buildscript {
-    ext.kotlinVersion = '1.2.30'
-    ext.gradleVersion = '3.1.0'
-    ext.gradlePluginVersion = '1.5'
-
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$gradleVersion"
-        classpath "com.github.dcendents:android-maven-gradle-plugin:$gradlePluginVersion"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.71"
     }
 }
 
@@ -24,10 +20,9 @@ allprojects {
         maven { url "https://jitpack.io" }
     }
     ext {
-        minSdkVersion = 17
-        targetSdkVersion = 26
-        compileSdkVersion = 26
-        buildToolsVersion = '27.0.3'
+        minSdkVersion = 19
+        targetSdkVersion = 28
+        compileSdkVersion = 28
 
         testInstrumentationRunner = "android.support.test.runner.AndroidJUnitRunner"
     }
