--- a/navigation-sample/build.gradle
+++ b/navigation-sample/build.gradle
@@ -4,9 +4,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-
     compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "com.raxdenstudios.navigation.sample"
@@ -30,14 +28,16 @@ android {
     }
 }
 
+repositories {
+    maven { url "https://jitpack.io" }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation project(':navigation')
 
-    implementation deps.sample.implementation
-    annotationProcessor deps.sample.annotationProcessor
-    kapt deps.sample.kapt
-    compileOnly deps.sample.compileOnly
-    testImplementation deps.sample.testImplementation
-    androidTestImplementation deps.sample.androidTestImplementation
+    rootProject.appDependencies.each {
+        add(it.configuration, it.dependency, it.options)
+    }
 }
